--- a/sterexy/templates/index.html
+++ b/sterexy/templates/index.html
@@ -4,7 +4,10 @@
 
 <ul class="wrap">
     <li class="layer" data-depth="1.00">
-        <img src="{% static "images/logo.jpg" %}" alt="Sterexy"/>
+        <img src="{% static "images/logo.png" %}" alt="Sterexy"/>
+    </li>
+    <li class="layer" data-depth="0.4">
+        <img src="{% static "images/logo.png" %}" alt="Sterexy"/>
     </li>
 </ul>
 
