--- a/sterexy/templates/index.html
+++ b/sterexy/templates/index.html
@@ -4,10 +4,10 @@
 
 <ul class="wrap">
     <li class="layer" data-depth="1.00">
-        <img src="{% static "images/logo.png" %}" alt="Sterexy"/>
+        <img src="{% static "images/orbit.png" %}" alt="Sterexy"/>
     </li>
     <li class="layer" data-depth="0.4">
-        <img src="{% static "images/logo.png" %}" alt="Sterexy"/>
+        <img src="{% static "images/sterexy.png" %}" alt="Sterexy"/>
     </li>
 </ul>
 
@@ -24,10 +24,10 @@
             invertY: true,
             limitX: false,
             limitY: 10,
-            scalarX: 6,
+            scalarX: 2,
             scalarY: 10,
-            frictionX:0.1,
-            frictionY: 0.05
+            frictionX:0.04,
+            frictionY: 0.01
         });
     });
 </script>
