--- a/sterexy/static/css/style.css
+++ b/sterexy/static/css/style.css
@@ -5,12 +5,16 @@ body {
 
 .wrap {
     text-align: center;
+    vertical-align: middle;
     overflow: hidden;
     height: 90%;
 }
 
 .wrap img {
-    height: 100%;
+    height: 80%;
+}
+
+.spin {
     -webkit-animation: rotator 10s infinite linear;
     -moz-animation: rotator 10s infinite linear;
     -o-animation: rotator 10s infinite linear;
