--- a/sterexy/static/css/style.css
+++ b/sterexy/static/css/style.css
@@ -4,17 +4,26 @@ body {
 }
 
 .wrap {
-    text-align: center;
-    vertical-align: middle;
     overflow: hidden;
-    height: 90%;
-}
-
-.wrap img {
-    height: 80%;
+    height: 85%;
 }
 
 .spin {
+    left: 32%;
+}
+
+.stext{
+    height: 100px;
+    padding-top: 130px;
+    left: 33.5%;
+}
+
+.stext, .spin {
+    top:25%;
+     position: absolute;
+}
+
+.s {
     -webkit-animation: rotator 10s infinite linear;
     -moz-animation: rotator 10s infinite linear;
     -o-animation: rotator 10s infinite linear;
