--- a/sterexy/static/css/style.css
+++ b/sterexy/static/css/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    background-size: 100%;
 }
 
 .wrap {
@@ -14,7 +15,7 @@ body {
 
 .stext{
     height: 100px;
-    padding-top: 130px;
+    padding-top: 135px;
     left: 33.5%;
 }
 
