--- a/sterexy/static/css/style.css
+++ b/sterexy/static/css/style.css
@@ -4,6 +4,19 @@ body {
     background-size: 100%;
 }
 
+body:before {
+    content: "";
+    position: fixed;
+    top: -10px;
+    left: 0;
+    width: 100%;
+    height: 10px;
+    -webkit-box-shadow: 0px 0px 30px rgba(0,0,0,1);
+    -moz-box-shadow: 0px 0px 30px rgba(0,0,0,1);
+    box-shadow: 0px 0px 30px rgba(0,0,0,1);
+    z-index: 100;
+}
+
 .wrap {
     overflow: hidden;
     height: 85%;
@@ -11,34 +24,16 @@ body {
 
 .spin {
     left: 32%;
+    height: 340px;
 }
 
 .stext{
-    height: 100px;
-    padding-top: 135px;
-    left: 33.5%;
+    height: 135px;
+    padding-top: 118px;
+    left: 34.5%;
 }
 
 .stext, .spin {
     top:25%;
-     position: absolute;
-}
-
-.s {
-    -webkit-animation: rotator 10s infinite linear;
-    -moz-animation: rotator 10s infinite linear;
-    -o-animation: rotator 10s infinite linear;
-}
-
-@-webkit-keyframes rotator {
-    from { -webkit-transform: rotate(360deg); }
-    to { -webkit-transform: rotate(0deg); }
-}
-@-moz-keyframes rotator {
-    from { -moz-transform: rotate(360deg)  }
-    to { -moz-transform: rotate(0deg)  }
-}
-@-o-keyframes rotator {
-    from { -o-transform: rotate(360deg); }
-    to { -o-transform: rotate(0deg); }
+    position: absolute;
 }
