--- a/sterexy/templates/index.html
+++ b/sterexy/templates/index.html
@@ -8,11 +8,11 @@
     data-invert-x="false"
     data-invert-y="true"
     data-limit-x="false"
-    data-limit-y="0"
+    data-limit-y="false"
     data-scalar-x="2"
-    data-scalar-y="0"
+    data-scalar-y="6"
     data-friction-x="0.1"
-    data-friction-y="0">
+    data-friction-y="0.2">
     <li class="layer" data-depth="0.7">
         <img class="spin" src="{% static "images/orbit_trs2.png" %}" alt="Sterexy"/>
     </li>
