--- a/sterexy/templates/index.html
+++ b/sterexy/templates/index.html
@@ -9,16 +9,15 @@
     data-invert-y="true"
     data-limit-x="false"
     data-limit-y="false"
-    data-scalar-x="2"
-    data-scalar-y="6"
+    data-scalar-x="1"
+    data-scalar-y="3"
     data-friction-x="0.1"
     data-friction-y="0.2">
-    <li class="layer" data-depth="0.7">
-        <img class="spin" src="{% static "images/orbit_trs2.png" %}" alt="Sterexy"/>
-    </li>
-    <li class="layer" data-depth="1.00">
-        <img class="stext" src="{% static "images/stext_trs.png" %}" alt="Sterexy"/>
-    </li>
+    <li class="layer" data-depth="0"></li>
+    <li class="layer" data-depth="0.30"><img class="spin shadow" src="{% static "images/logo/orbit-shadow.png" %}" alt="Sterexy"/></li>
+    <li class="layer" data-depth="0.70"><img class="spin" src="{% static "images/logo/orbit.png" %}" alt="Sterexy"/></li>
+    <li class="layer" data-depth="0.60"><img class="text shadow" src="{% static "images/logo/text-shadow.png" %}" alt="Sterexy"/></li>
+    <li class="layer" data-depth="1.00"><img class="text" src="{% static "images/logo/text.png" %}" alt="Sterexy"/></li>
 </ul>
 <style type="text/css">
     body {
