--- a/sterexy/static/css/style.css
+++ b/sterexy/static/css/style.css
@@ -22,7 +22,11 @@ body:before {
     height: 85%;
 }
 
-.shadow {
+.text.shadow {
+    padding: 1% 0 0 1%;
+}
+
+.spin.shadow {
     padding: 0.5% 0 0 0.5%;
 }
 
