--- a/sterexy/static/css/style.css
+++ b/sterexy/static/css/style.css
@@ -17,9 +17,9 @@ body:before {
     z-index: 100;
 }
 
-.wrap {
+#wrap {
     overflow: hidden;
-    height: 85%;
+    margin: 0;
 }
 
 .text.shadow {
@@ -31,8 +31,8 @@ body:before {
 }
 
 .text, .spin {
-    top:25%;
-    left: 33%;
-    height: 50%;
+    top:50%;
+    left:50%;
+    height: 40%;
     position: absolute;
 }
