--- a/sterexy/static/css/style.css
+++ b/sterexy/static/css/style.css
@@ -11,15 +11,28 @@ body:before {
     left: 0;
     width: 100%;
     height: 10px;
-    -webkit-box-shadow: 0px 0px 30px rgba(0,0,0,1);
-    -moz-box-shadow: 0px 0px 30px rgba(0,0,0,1);
-    box-shadow: 0px 0px 30px rgba(0,0,0,1);
+    -webkit-box-shadow: 0 0 30px rgba(0,0,0,1);
+    -moz-box-shadow: 0 0 30px rgba(0,0,0,1);
+    box-shadow: 0 0 30px rgba(0,0,0,1);
     z-index: 100;
 }
 
+#container {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
 #wrap {
+    list-style: none;
+    height: 100%;
     overflow: hidden;
     margin: 0;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 .text.shadow {
