--- a/templates/main.html
+++ b/templates/main.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>{% block title %}Sterexy{% endblock %}</title>
     {% block styles %}{% endblock %}
 </head>
 <body>
-    {% block content %}{% endblock %}
+    <div id="container">
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
