save background to static files

--- a/sterexy/templates/index.html
+++ b/sterexy/templates/index.html
@@ -7,7 +7,7 @@
 <style type="text/css">
     body {
         {% comment %}background-image: url('http://apod.nasa.gov/apod/{{ href }}');{% endcomment %}
-        background-image: url("{% static "images/src.jpg" %}");
+        background-image: url("{% static "images/background.jpg" %}");
     }
 </style>
 <script src="{% static "js/jquery-1.10.2.min.js" %}"></script>
