--- a/sterexy/static/css/style.css
+++ b/sterexy/static/css/style.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
     padding: 0;
-    background-size: 100%;
+    background-size: cover;
+    background-repeat:no-repeat;
+    /*background-position:center center;*/
 }
 
 body:before {
