--- a/sterexy/templates/index.html
+++ b/sterexy/templates/index.html
@@ -6,8 +6,7 @@
 <link rel="stylesheet" href="{% static "css/style.css" %}" type="text/css" media="screen" />
 <style type="text/css">
     body {
-        {% comment %}background-image: url('http://apod.nasa.gov/apod/{{ href }}');{% endcomment %}
-        background-image: url("{% static "images/background.jpg" %}");
+        background-image: url('{{ href }}');
     }
 </style>
 <script src="{% static "js/jquery-1.10.2.min.js" %}"></script>
